News UAT/force-app/main/default/objects/Booking_Line_Item__c/Booking_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Booking Line Items</description>
    <label>Booking Line Item</label>
    <nameField>
        <displayFormat>BKL{00000000}</displayFormat>
        <label>Booking Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>