News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Ad_Size_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Size_Name__c</fullName>
    <label>Ad Size Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>