News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <description>Ad Type</description>
    <label>Ad Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>