News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/AdjustmentTotal__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentTotal__c</fullName>
    <label>Adjustment Total</label>
    <summarizedField>CreditAndDebit__c.Amount__c</summarizedField>
    <summaryForeignKey>CreditAndDebit__c.Booking_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>