News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Billed__c.field-meta.xml
<CustomField>
    <fullName>Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billed</description>
    <label>Billed</label>
    <type>Checkbox</type>
</CustomField>