News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Booked_Class__c.field-meta.xml
<CustomField>
    <fullName>Booked_Class__c</fullName>
    <description>Booked Class</description>
    <label>Booked Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>