News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Booking_Category__c.field-meta.xml
<CustomField>
    <fullName>Booking_Category__c</fullName>
    <formula>IF( ISPICKVAL(Booking__r.Source_System__c, &#39;CyberAd&#39;) || 
ISPICKVAL(Booking__r.Source_System__c, &#39;OSCA&#39;) ||
Ad_Type__c ==&#39;Liner&#39; ||
Ad_Type__c ==&#39;Semi Display&#39; ||
Ad_Type__c ==&#39;Semi&#39;
, &#39;Classified&#39;, &#39;Display&#39;)</formula>
    <label>Booking Category</label>
    <type>Text</type>
</CustomField>