News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Booking_Line_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Booking_Line_Metadata__c</fullName>
    <label>Booking Line Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>