News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>Reservation cancellation date - Date on which the reservation was cancelled.</description>
    <inlineHelpText>Reservation cancellation date - Date on which the reservation was cancelled.</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>