News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <description>Caption</description>
    <label>Caption</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>