News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Classification</description>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>