News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Colour_Name__c.field-meta.xml
<CustomField>
    <fullName>Colour_Name__c</fullName>
    <description>Colour Name</description>
    <label>Colour Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>