News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Date__c</fullName>
    <description>Date on which this reservation was converted to a booking and confirmed.</description>
    <inlineHelpText>Date on which this reservation was converted to a booking and confirmed.</inlineHelpText>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>