News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Datawarehouse__c.field-meta.xml
<CustomField>
    <fullName>Datawarehouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Datawarehouse Flag</description>
    <label>Datawarehouse</label>
    <type>Checkbox</type>
</CustomField>