News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Days_Lapsed_Reservation_Expired__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_Reservation_Expired__c</fullName>
    <description>Days between Booking line item Reserved to Reservation expired.</description>
    <formula>IF(NOT(ISBLANK(Reservation_Expired_Date__c) &amp;&amp;  Reservation_Expired_Date__c  &gt; Reserved_Date__c ), TEXT(Reservation_Expired_Date__c - Reserved_Date__c ), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days between Booking line item Reserved to Reservation expired.</inlineHelpText>
    <label>Days Lapsed - Reservation Expired</label>
    <type>Text</type>
</CustomField>