News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Days_Lapsed_to_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_to_Confirmation__c</fullName>
    <description>Days lapsed between booking confirmed to the last reservation date.</description>
    <formula>IF(NOT(ISBLANK(Confirmed_Date__c)), TEXT(Confirmed_Date__c - Reserved_Date__c ), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days lapsed between booking confirmed to the last reservation date.</inlineHelpText>
    <label>Days Lapsed - To Confirmation</label>
    <type>Text</type>
</CustomField>