News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Days_Lapsed_To_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_To_Reservation__c</fullName>
    <description>Days lapsed between booking item creation to reservation</description>
    <formula>IF(NOT(ISBLANK(Reserved_Date__c)), TEXT(Reserved_Date__c - DATEVALUE(CreatedDate)), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days lapsed between booking item creation to reservation</inlineHelpText>
    <label>Days Lapsed - To Reservation</label>
    <type>Text</type>
</CustomField>