News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <label>Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>