News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>NEWS Division</description>
    <label>Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>