News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Expiry__c.field-meta.xml
<CustomField>
    <fullName>Expiry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Expiry Flag</description>
    <label>Expiry</label>
    <type>Checkbox</type>
</CustomField>