News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/First_Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reserved_Date__c</fullName>
    <description>Date on which this booking line item was first reserved.</description>
    <inlineHelpText>Date on which this booking line item was first reserved.</inlineHelpText>
    <label>First Reserved Date</label>
    <type>Date</type>
</CustomField>