News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <description>Gross Price of Booking Line Item</description>
    <label>Gross Price GST Excl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>