News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_Price_Change_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_Change_Datetime__c</fullName>
    <description>workflow rule will timestamp this field when gross price is updated</description>
    <label>Gross Price Change Datetime</label>
    <type>DateTime</type>
</CustomField>