News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_Price_GST_Incl__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_GST_Incl__c</fullName>
    <formula>(1 + $Setup.News_Default_Setting__c.GST_Percentage__c)  *  Gross_Price__c</formula>
    <label>Gross Price GST Incl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>