News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Gross_Price_YTD__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price_YTD__c</fullName>
    <label>Gross Price YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>