News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Insertion_Number__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Number__c</fullName>
    <description>Insertion Number</description>
    <label>Insertion Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>