News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Insertion_Set__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Set__c</fullName>
    <description>Insertion Set</description>
    <label>Insertion Set</label>
    <length>30</length>
    <type>Text</type>
</CustomField>