News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Lines__c.field-meta.xml
<CustomField>
    <fullName>Lines__c</fullName>
    <label>Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>