News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Missed__c.field-meta.xml
<CustomField>
    <fullName>Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Missed</description>
    <label>Missed</label>
    <type>Checkbox</type>
</CustomField>