News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/NewsAdds_Paid__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Paid__c</fullName>
    <description>Additional amount paid to a NewsAdds booking due to change in booking</description>
    <inlineHelpText>Additional amount paid to a NewsAdds booking due to change in booking</inlineHelpText>
    <label>NewsAdds Paid</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>