News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/NewsAdds_Refund__c.field-meta.xml
<CustomField>
    <fullName>NewsAdds_Refund__c</fullName>
    <description>Amount refunded to a NewsAdds booking due to a change in booking</description>
    <inlineHelpText>Amount refunded to a NewsAdds booking due to a change in booking</inlineHelpText>
    <label>NewsAdds Refund</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>