News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/NonAdjustedTotal__c.field-meta.xml
<CustomField>
    <fullName>NonAdjustedTotal__c</fullName>
    <label>Gross Price - Non Adjusted GST Excl</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>