News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units__c</fullName>
    <description>Number of Units</description>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>