News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Page_Number_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Page_Number_Achieved__c</fullName>
    <label>Page Number Achieved</label>
    <length>50</length>
    <type>Text</type>
</CustomField>