News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Price_Excl_GST__c.field-meta.xml
<CustomField>
    <fullName>Price_Excl_GST__c</fullName>
    <description>GST Exclusive Price</description>
    <label>Price Excl GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>