News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Price_Incl_GST__c.field-meta.xml
<CustomField>
    <fullName>Price_Incl_GST__c</fullName>
    <label>Price Incl GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>