News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Booking Lines</relationshipLabel>
    <relationshipName>Booking_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>