News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <description>Publication</description>
    <label>Publication Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>