News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name__c</fullName>
    <description>Publication name from EMMA Data table based on Publication Code</description>
    <label>Publication Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>