News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Published</description>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>