News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Unit__c</fullName>
    <description>Rate Per Unit</description>
    <label>Rate Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>