News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Rate_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Unit_Name__c</fullName>
    <description>Rate Unit Name</description>
    <label>Rate Unit Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>