News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Readership__c.field-meta.xml
<CustomField>
    <fullName>Readership__c</fullName>
    <label>Readership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>