News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Reservation_Counter__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Reservation counter - Increments everytime when a reservation is made.</description>
    <inlineHelpText>Reservation counter - Increments everytime when a reservation is made.</inlineHelpText>
    <label>Reservation Counter</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>