News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Reservation_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Expired_Date__c</fullName>
    <description>Reservation Expired Date - workflow updates this date when the status is reservation expired.</description>
    <inlineHelpText>Reservation Expired Date - workflow updates this date when the status is reservation expired.</inlineHelpText>
    <label>Reservation Expired Date</label>
    <type>Date</type>
</CustomField>