News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date__c</fullName>
    <description>Date on which the booking line item was reserved</description>
    <inlineHelpText>Date on which the booking line item was reserved</inlineHelpText>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>