News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Revenue_Group__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Group__c</fullName>
    <description>Revenue Group</description>
    <label>Revenue Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>