News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <description>Run Date</description>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>