News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Run_Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Run_Day_of_Week__c</fullName>
    <formula>CASE(MOD(Run_Date__c - DATE(1900, 1, 7), 7), 
          1, &quot;MON&quot;, 
          2, &quot;TUE&quot;, 
          3, &quot;WED&quot;, 
          4, &quot;THU&quot;, 
          5, &quot;FRI&quot;, 
          6, &quot;SAT&quot;, 
          0, &quot;SUN&quot;, 
          &quot;INV&quot;
       )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Day of Week</label>
    <type>Text</type>
</CustomField>