News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>