News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Stop_On_Web_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_On_Web_Date__c</fullName>
    <description>Stop On Web Date</description>
    <label>Stop On Web Date</label>
    <type>Date</type>
</CustomField>