News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <description>Style</description>
    <label>Style</label>
    <length>30</length>
    <type>Text</type>
</CustomField>