News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/System_Price__c.field-meta.xml
<CustomField>
    <fullName>System_Price__c</fullName>
    <description>System Price</description>
    <label>System Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>