News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Tearsheet_url__c.field-meta.xml
<CustomField>
    <fullName>Tearsheet_url__c</fullName>
    <label>Tearsheet url</label>
    <type>Url</type>
</CustomField>