News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Til_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Til_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Til Cancelled</description>
    <label>Til Cancelled</label>
    <type>Checkbox</type>
</CustomField>