News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/TotalCredits__c.field-meta.xml
<CustomField>
    <fullName>TotalCredits__c</fullName>
    <label>Total Credits</label>
    <summarizedField>CreditAndDebit__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CreditAndDebit__c.Amount__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditAndDebit__c.Booking_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>