News UAT/force-app/main/default/objects/Booking_Line_Item__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Unique Id</description>
    <label>Unique Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>